--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /node_modules
-/public/hot
-/public/storage
 /storage/*.key
 /vendor
 .env
@@ -11,3 +9,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea
+/public/*
