--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,28 @@ name: CD
 on:
   push:
     branches: [ production ]
-
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          token: ${{ secrets.PUSH_TOKEN }}
-#      - name: Set up Node
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: '12.x'
-#      - run: npm install
-#      - run: npm run production
-#      - name: Commit built assets
-#        run: |
-#          git config --local user.email "kaelch@peoplenjob.com"
-#          git config --local user.name "KIM CHAN HO"
-#          git checkout -B deploy
-#          git add -f public/
-#          git commit -m "Build front-end assets"
-#          git push -f origin deploy
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - run: npm install
+      - run: npm run production
+      - name: Commit built assets
+        run: |
+          git config --local user.email "kaelch@peoplenjob.com"
+          git config --local user.name "KIM CHAN HO"
+          git checkout -B deploy
+          git add -f public/
+          git commit -m "Build front-end assets"
+          git push -f origin deploy
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         with:
@@ -33,5 +33,4 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd "/home/${{ secrets.SSH_NAME }}"
-            touch test.text
+            cd "/home/${{ secrets.SSH_NAME }}/github_action/github-action && ../server_deploy.sh"
