--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd "/home/${{ secrets.SSH_NAME }}/github_action/github-action && ../server_deploy.sh"
+            cd "/home/${{ secrets.SSH_NAME }}/github_action/github-action"
+            ../server_deploy.sh
