--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Manual Workflow Approval
+        uses: trstringer/manual-approval@v1.9.0
+        with:
+          secret: ${{ secrets.PUSH_TOKEN }}
+          approvers: ithank73
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PUSH_TOKEN }}
