--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
       - name: Manual Workflow Approval
         uses: trstringer/manual-approval@v1.9.0
+
         with:
           secret: ${{ secrets.PUSH_TOKEN }}
           approvers: ithank73
+          minimum-approvals: 1
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PUSH_TOKEN }}
@@ -30,5 +32,14 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ${{ secrets.APP_PATH }}
-            ./server-deploy.sh
+            echo "Deploying application ..."
+            composer install -v
+            php artisan config:clear
+            php artisan route:cache
+            php artisan view:clear
+            php artisan migrate
+            php artisan queue:restart
+            npm install
+            npm run production
+            echo "Application deployed!"
+
