--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             echo "Deploying application ..."
+            git fetch origin deploy
+            git reset --hard origin/deploy
             composer install -v
             php artisan config:clear
             php artisan route:cache
