--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            echo "Deploying application ..."
-            git fetch origin deploy
-            git reset --hard origin/deploy
-            composer install -v
-            php artisan config:clear
-            php artisan route:cache
-            php artisan view:clear
-            php artisan migrate
-            php artisan queue:restart
-            npm install
-            npm run production
-            echo "Application deployed!"
-
+            cd ${{ secrets.APP_PATH }}
+            ./server-deploy.sh
