--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,4 +28,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.APP_PATH }}
+            git fetch origin ${{ github.ref_name }}
+            git reset --hard origin/${{ github.ref_name }}
             ../server-deploy.sh
