update script to soft-udpate.sh

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,4 +26,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.APP_PATH }}
-            ../soft-update.sh
+#            ../soft-update.sh
