--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,7 +28,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ${{ secrets.APP_PATH }}
+            cd ~/master
             closed_branch="${{ github.event.pull_request.head.ref }}"
             git fetch origin "${closed_branch}"
             git reset --hard "origin/${closed_branch}"
