--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,4 +25,6 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ${{ secrets.APP_PATH }}
+            cd ~/master
+            echo "Current user: $(whoami)"
+            ../find-user.sh
