--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,9 +28,6 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            echo "Current user: $(whoami)"
             cd ~/master
-#            closed_branch="${{ github.event.pull_request.head.ref }}"
-#            git fetch origin master
-#            git reset --hard "origin/master"
-            ../soft-update.sh
+#            echo "Current user: $(whoami)"
+#            ../soft-update.sh
