--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,28 +1,28 @@
-name: CD
-on:
-  pull_request:
-    branches:
-      - '*'
-  workflow_dispatch:
-jobs:
-  deploy_dev:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PUSH_TOKEN }}
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - run: npm install
-      - run: npm run production
-      - name: Deploy to production
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_SERVER }}
-          username: ${{ secrets.SSH_NAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            cd ${{ secrets.APP_PATH }}
+#name: CD
+#on:
+#  pull_request:
+#    branches:
+#      - '*'
+#  workflow_dispatch:
+#jobs:
+#  deploy_dev:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#        with:
+#          token: ${{ secrets.PUSH_TOKEN }}
+#      - name: Set up Node
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: '12.x'
+#      - run: npm install
+#      - run: npm run production
+#      - name: Deploy to production
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.SSH_SERVER }}
+#          username: ${{ secrets.SSH_NAME }}
+#          password: ${{ secrets.SSH_PASSWORD }}
+#          port: ${{ secrets.SSH_PORT }}
+#          script: |
+#            cd ${{ secrets.APP_PATH }}
