--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,25 +1,27 @@
 name: CD
 on:
-  pull_request:
-    branches:
-      - '*'
-    types:
-      - closed
-  workflow_dispatch:
+    push:
+      branches:
+        - *
+#    branches:
+#      - '*'
+#    types:
+#      - closed
+    workflow_dispatch:
 jobs:
   deploy_prod:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PUSH_TOKEN }}
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - run: npm install
-      - run: npm run production
+#      - uses: actions/checkout@v2
+#        with:
+#          token: ${{ secrets.PUSH_TOKEN }}
+#      - name: Set up Node
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: '12.x'
+#      - run: npm install
+#      - run: npm run production
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         with:
@@ -33,4 +35,5 @@ jobs:
 #            closed_branch="${{ github.event.pull_request.head.ref }}"
 #            git fetch origin master
 #            git reset --hard "origin/master"
-            ../soft-update.sh
+#            ../soft-update.sh
+            touch test
