--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - *
+#    types:
+#      - closed
+  workflow_dispatch:
 jobs:
   deploy_prod:
     if: ${{ github.event.pull_request.merged }}
