--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -11,15 +11,15 @@ jobs:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PUSH_TOKEN }}
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - run: npm install
-      - run: npm run production
+#      - uses: actions/checkout@v2
+#        with:
+#          token: ${{ secrets.PUSH_TOKEN }}
+#      - name: Set up Node
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: '12.x'
+#      - run: npm install
+#      - run: npm run production
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         with:
