--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,9 +1,8 @@
 name: CD
 on:
   push:
-#    types:
-#      - closed
-
+    branches:
+      - production
 jobs:
   deploy_prod:
     runs-on: ubuntu-latest
