--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -9,12 +9,18 @@ jobs:
     steps:
       - name: Deploy to production
         uses: appleboy/ssh-action@master
+        env:
+          COMPOSER: "true"
+          NPM_INSTALL: "false"
+          NPM_BUILD: "true"
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
+          envs: COMPOSER,NPM_INSTALL,NPM_BUILD
           script: |
             echo "Current user: $(whoami)"
             cd ~/master
-            touch my_action_init
+            ./test.sh
+
