--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -1,8 +1,14 @@
 name: PeopleNJob CD
-
 on:
   push:
-
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 jobs:
   deploy:
     runs-on: ubuntu-latest
