--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+#    if: github.event_name == 'push'
+    if: ${{ github.event.pull_request.merged }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
