--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
-          COMPOSER: ${{ github.event.label.name == 'composer install' }}
-          NPM_INSTALL: ${{ github.event.label.name == 'npm install' }}
-          NPM_BUILD: ${{ github.event.label }}
+          COMPOSER: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
+          NPM_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'npm install') && 'true' || 'false' }}
+          NPM_BUILD: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') && 'true' || 'false' }}
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
