--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -12,9 +12,8 @@ jobs:
 #    if: github.event_name == 'push'
     if: ${{ github.event.pull_request.merged }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
+#      - name: Checkout code
+#        uses: actions/checkout@v2
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
@@ -35,10 +34,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Add more steps as needed for your manual job
+#      - name: Checkout code
+#        uses: actions/checkout@v2
       - name: Run some commands
         run: |
           echo "This job runs only when triggered manually."
