test deploy.sh 5

--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -28,6 +28,7 @@ jobs:
           envs: COMPOSER,NPM_INSTALL,NPM_BUILD
           script: |
             cd ${{ secrets.MASTER_PATH }}
+            echo pwd
             ../source-ci.sh
 
   manualJob:
