--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
-          COMPOSER: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
+          COMPOSER_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
           NPM_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'npm install') && 'true' || 'false' }}
           NPM_BUILD: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') && 'true' || 'false' }}
         with:
@@ -25,7 +25,7 @@ jobs:
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          envs: COMPOSER,NPM_INSTALL,NPM_BUILD
+          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD
           script: |
             cd ${{ secrets.MASTER_PATH }}
             ../source-ci.sh
