--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -2,6 +2,13 @@ name: PeopleNJob CD
 
 on:
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
   pull_request:
     types:
       - closed
@@ -20,12 +27,13 @@ jobs:
           COMPOSER_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
           NPM_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'npm install') && 'true' || 'false' }}
           NPM_BUILD: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') && 'true' || 'false' }}
+          DB_MIGRATION: ${{ contains(github.event.pull_request.labels.*.name, 'db migration') && 'true' || 'false' }}
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD
+          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
           script: |
             cd ${{ secrets.MASTER_PATH }}
             ../source-ci.sh
