--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -3,12 +3,19 @@ name: PeopleNJob CD
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'
+      environment:
+        type: environment
+        description: Select the environment
+      boolean:
+        type: boolean
+        description: True or False
+      choice:
+        type: choice
+        description: Make a choice
+        options:
+          - foo
+          - bar
+          - baz
   pull_request:
     types:
       - closed
