--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -3,20 +3,30 @@ name: PeopleNJob CD
 on:
   workflow_dispatch:
     inputs:
-      environment:
-        type: environment
-        description: Select the environment
-      boolean:
+      NPM_INSTALL:
         type: boolean
-        description: True or False
-      choice:
-        type: choice
-        description: Make a choice
-        options:
-          - COMPOSER_INSTALL
-          - NPM_INSTALL
-          - NPM_BUILD
-          - DB_MIGRATION
+        default: false
+        description: NPM_INSTALL
+      NPM_BUILD:
+        type: boolean
+        default: false
+        description: NPM_BUILD
+      COMPOSER_INSTALL:
+        type: boolean
+        default: false
+        description: COMPOSER_INSTALL
+      DB_MIGRATION:
+        type: boolean
+        default: false
+        description: DB_MIGRATION
+#      choices:
+#        type: choice
+#        description: Make a choice
+#        options:
+#          - COMPOSER_INSTALL
+#          - NPM_INSTALL
+#          - NPM_BUILD
+#          - DB_MIGRATION
   pull_request:
     types:
       - closed
