--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -37,8 +37,6 @@ jobs:
 #    if: github.event_name == 'push'
     if: ${{ github.event.pull_request.merged }}
     steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
@@ -56,12 +54,23 @@ jobs:
             cd ${{ secrets.MASTER_PATH }}
             ../source-ci.sh
 
-  manualJob:
+  ci:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-      - name: Run some commands
-        run: |
-          echo "Choice: ${{ github.event.inputs.choice }}"
+      - name: Deploy to production
+        uses: appleboy/ssh-action@master
+        env:
+          COMPOSER_INSTALL: ${{ github.event.inputs.NPM_BUILD && 'true' || 'false' }}
+          NPM_INSTALL: ${{ github.event.inputs.NPM_INSTALL && 'true' || 'false' }}
+          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD && 'true' || 'false' }}
+          DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION && 'true' || 'false' }}
+        with:
+          host: ${{ secrets.SSH_SERVER }}
+          username: ${{ secrets.SSH_NAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
+          script: |
+            cd ${{ secrets.MASTER_PATH }}
+            ../ci.sh
