--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -28,6 +28,30 @@ jobs:
 #    if: github.event_name == 'push'
     if: ${{ github.event.pull_request.merged }}
     steps:
+      - name: Checkout source code.   # 레포지토리 체크아웃
+        uses: actions/checkout@master
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
+      - name: Set up Node
+        uses: actions/setup-node@v1
+#        with:
+#          node-version: '12.x'
+      - name: Install Dependencies    # 의존 파일 설치
+        run: npm install
+      - name: Install Dependencies    # 빌드
+        run: npm run production
+      - name: Transfer Deploy Script use SCP
+        uses: appleboy/scp-action@master
+        env:
+          ROOT_PATH: /home
+        with:
+          host: ${{ secrets.SSH_SERVER }}
+          username: ${{ secrets.SSH_NAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "public"
+          target: "/home//home/people_l7/master/public/dist"
+          strip_components: 1
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
