--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -34,8 +34,8 @@ jobs:
           token: ${{ secrets.PUSH_TOKEN }}
       - name: Set up Node
         uses: actions/setup-node@v1
-#        with:
-#          node-version: '12.x'
+        with:
+          node-version: '12.x'
       - name: Install Dependencies    # 의존 파일 설치
         run: npm install
       - name: Install Dependencies    # 빌드
