--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -43,14 +43,14 @@ jobs:
         run: npm run production
       - name: Transfer Deploy Script use SCP
         uses: appleboy/scp-action@master
-        env:
-          ROOT_PATH: /home
+#        env:
+#          ROOT_PATH: /home
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "public"
+          source: "public/*"
           target: "/home/people_l7/master/public/dist"
           strip_components: 1
 #      - name: Deploy to production
