--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -50,7 +50,7 @@ jobs:
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "public/*"
+          source: "public"
           target: "/home/people_l7/master/public/dist"
           strip_components: 2
 #      - name: Deploy to production
