--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -23,11 +23,9 @@ on:
     types:
       - closed
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-#    if: github.event_name == 'push'
-
-    if: ${{ github.event.pull_request.merged }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') }}
     steps:
       - name: Checkout source code.   # 레포지토리 체크아웃
         uses: actions/checkout@master
@@ -43,32 +41,59 @@ jobs:
         run: npm run production
       - name: Transfer Deploy Script use SCP
         uses: appleboy/scp-action@master
-#        env:
-#          ROOT_PATH: /home
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "public"
-          target: "/home/people_l7/master/public/dist"
-#      - name: Deploy to production
-#        uses: appleboy/ssh-action@master
-#        env:
-#          COMPOSER_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
-#          NPM_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'npm install') && 'true' || 'false' }}
+          source: "public/dist"
+          target: ${{ secrets.MASTER_PATH }}/public/dist
+  deploy:
+    runs-on: ubuntu-latest
+#    if: github.event_name == 'push'
+    if: ${{ github.event.pull_request.merged }}
+    steps:
+      - name: Deploy to production
+        uses: appleboy/ssh-action@master
+        env:
+          COMPOSER_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'composer install') && 'true' || 'false' }}
+          NPM_INSTALL: ${{ contains(github.event.pull_request.labels.*.name, 'npm install') && 'true' || 'false' }}
 #          NPM_BUILD: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') && 'true' || 'false' }}
-#          DB_MIGRATION: ${{ contains(github.event.pull_request.labels.*.name, 'db migration') && 'true' || 'false' }}
-#        with:
-#          host: ${{ secrets.SSH_SERVER }}
-#          username: ${{ secrets.SSH_NAME }}
-#          password: ${{ secrets.SSH_PASSWORD }}
-#          port: ${{ secrets.SSH_PORT }}
-#          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
-#          script: |
-#            cd ${{ secrets.MASTER_PATH }}
-#            ../source-ci.sh
-
+          DB_MIGRATION: ${{ contains(github.event.pull_request.labels.*.name, 'db migration') && 'true' || 'false' }}
+        with:
+          host: ${{ secrets.SSH_SERVER }}
+          username: ${{ secrets.SSH_NAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
+          script: |
+            cd ${{ secrets.MASTER_PATH }}
+            ../source-ci.sh
+  work_flow_build:
+    runs-on: ubuntu-latest
+    if: ${{ (github.event_name == 'workflow_dispatch') && (github.event.inputs.NPM_BUILD) }}
+    steps:
+      - name: Checkout source code.   # 레포지토리 체크아웃
+        uses: actions/checkout@master
+        with:
+          token: ${{ secrets.PUSH_TOKEN }}
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install Dependencies    # 의존 파일 설치
+        run: npm install
+      - name: Install Dependencies    # 빌드
+        run: npm run production
+      - name: Transfer Deploy Script use SCP
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_SERVER }}
+          username: ${{ secrets.SSH_NAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "public/dist"
+          target: ${{ secrets.MASTER_PATH }}/public/dist
   ci:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
@@ -78,7 +103,7 @@ jobs:
         env:
           COMPOSER_INSTALL: ${{ github.event.inputs.COMPOSER_INSTALL }}
           NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
-          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
+#          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
           DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
         with:
           host: ${{ secrets.SSH_SERVER }}
