--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -46,8 +46,10 @@ jobs:
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "public/dist"
-          target: ${{ secrets.MASTER_PATH }}/public/dist
+          source: "public"
+          target: "/home/people_l7/master/public/dist"
+#          source: "public/dist"
+#          target: ${{ secrets.MASTER_PATH }}/public/dist
   deploy:
     runs-on: ubuntu-latest
 #    if: github.event_name == 'push'
