--- a/.github/workflows/my_action.yml
+++ b/.github/workflows/my_action.yml
@@ -24,8 +24,8 @@ on:
       - closed
 jobs:
   build:
+    if: github.event_name != 'workflow_dispatch'
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout source code.   # 레포지토리 체크아웃
         if: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') }}
@@ -43,7 +43,7 @@ jobs:
       - name: Install Dependencies    # 빌드
         if: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') }}
         run: npm run production
-      - name: Transfer Deploy Script use SCP
+      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
         if: ${{ contains(github.event.pull_request.labels.*.name, 'npm build') }}
         uses: appleboy/scp-action@master
         with:
@@ -56,10 +56,10 @@ jobs:
 #          source: "public/dist"
 #          target: ${{ secrets.MASTER_PATH }}/public/dist
   deploy:
+    needs: build
     runs-on: ubuntu-latest
 #    if: github.event_name == 'push'
     if: ${{ github.event.pull_request.merged }}
-    needs: build
     steps:
       - name: Deploy to production
         uses: appleboy/ssh-action@master
@@ -100,8 +100,10 @@ jobs:
           username: ${{ secrets.SSH_NAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "public/dist"
-          target: ${{ secrets.MASTER_PATH }}/public/dist
+          source: "public"
+          target: "/home/people_l7/master/public/dist"
+#          source: "public/dist"
+#          target: ${{ secrets.MASTER_PATH }}/public/dist
   ci:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
