--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -1,4 +1,4 @@
-name: WorkFlow Dispatch
+name: DEV DEPLOY
 
 on:
   workflow_dispatch:
@@ -22,39 +22,37 @@ on:
 jobs:
   work_flow_build:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
     #    if: ${{ (github.event_name == 'workflow_dispatch') && (github.event.inputs.NPM_BUILD) }}
     steps:
-      - name: Checkout source code.   # 레포지토리 체크아웃
-        if: github.event.inputs.NPM_BUILD
-        uses: actions/checkout@master
-        with:
-          token: ${{ secrets.PUSH_TOKEN }}
-      - name: Set up Node
-        if: github.event.inputs.NPM_BUILD
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - name: Install Dependencies    # 의존 파일 설치
-        if: github.event.inputs.NPM_BUILD
-        run: npm install
-      - name: Install Dependencies    # 빌드
-        if: github.event.inputs.NPM_BUILD
-        run: npm run production
-      - name: Transfer Deploy Script use SCP
-        if: github.event.inputs.NPM_BUILD
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_SERVER }}
-          username: ${{ secrets.SSH_NAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "public"
-          target: "/home/people_l7/master/public/dist"
+  #      - name: Checkout source code.   # 레포지토리 체크아웃
+  #        if: github.event.inputs.NPM_BUILD
+  #        uses: actions/checkout@master
+  #        with:
+  #          token: ${{ secrets.PUSH_TOKEN }}
+  #      - name: Set up Node
+  #        if: github.event.inputs.NPM_BUILD
+  #        uses: actions/setup-node@v1
+  #        with:
+  #          node-version: '12.x'
+  #      - name: Install Dependencies    # 의존 파일 설치
+  #        if: github.event.inputs.NPM_BUILD
+  #        run: npm install
+  #      - name: Install Dependencies    # 빌드
+  #        if: github.event.inputs.NPM_BUILD
+  #        run: npm run production
+  #      - name: Transfer Deploy Script use SCP
+  #        if: github.event.inputs.NPM_BUILD
+  #        uses: appleboy/scp-action@master
+  #        with:
+  #          host: ${{ secrets.SSH_SERVER }}
+  #          username: ${{ secrets.SSH_NAME }}
+  #          password: ${{ secrets.SSH_PASSWORD }}
+  #          port: ${{ secrets.SSH_PORT }}
+  #          source: "public"
+  #          target: "/home/people_l7/master/public/dist"
   workflow_ci:
     needs: work_flow_build
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
     steps:
       - name: Deploy to production
         uses: appleboy/ssh-action@master
@@ -71,4 +69,5 @@ jobs:
           envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
           script: |
             cd ${{ secrets.MASTER_PATH }}
-            ../ci.sh
+            echo ${GITHUB_REF#refs/heads/}
+#            ../ci.sh
