--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -25,6 +25,10 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
+      - name: Extract region and env from branch
+        run: |
+          BRANCH=${GITHUB_REF#refs/heads/}
+          echo "${BRANCH}"
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
