--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -45,8 +45,8 @@ jobs:
           envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
           script: |
             cd ${{ secrets.MASTER_PATH }}
+            echo "Current branch on server is: $BRANCH_NAME"
             ../dev-deploy.sh
-            echo "Current branch is: $GITHUB_REF"
-            echo "Current branch is: ${GITHUB_REF}"
+
 #            echo ${GITHUB_REF#refs/heads/}
 
