--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -27,7 +27,10 @@ jobs:
     steps:
       - name: Extract branch name
         id: extract_branch
-        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+        run: |
+          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+          BRANCH=${GITHUB_REF#refs/heads/}
+          echo "${BRANCH}"
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
