--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -39,7 +39,7 @@ jobs:
           NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
           #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
           DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
-          BRANCH_NAME: ${{ github.ref_name }}
+#          BRANCH_NAME: ${{ github.ref_name }}
           BRANCH: ${GITHUB_REF#refs/heads/}
 #          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
 #          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
