--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -28,21 +28,23 @@ jobs:
       - name: Extract branch name
         id: extract_branch
         run: |
-          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
           BRANCH=${GITHUB_REF#refs/heads/}
-          echo "${BRANCH}"
-          echo "${GITHUB_REF#refs/heads/}"
+#          BRANCH=${GITHUB_REF#refs/heads/}
+#          echo "${BRANCH}"
+#          echo "${GITHUB_REF#refs/heads/}"
+          echo "::set-output name=region::$(echo ${BRANCH})"
       - name: Deploy to production
         uses: appleboy/ssh-action@master
-        env:
-          COMPOSER_INSTALL: ${{ github.event.inputs.COMPOSER_INSTALL }}
-          NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
-          #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
-          DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
-#          BRANCH_NAME: ${{ github.ref_name }}
-          BRANCH: ${GITHUB_REF#refs/heads/}
-#          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
-#          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
+        env: ${{ steps.extract.outputs.env }}
+#        env:
+#          COMPOSER_INSTALL: ${{ github.event.inputs.COMPOSER_INSTALL }}
+#          NPM_INSTALL:  ${{ github.event.inputs.NPM_INSTALL }}
+#          #          NPM_BUILD: ${{ github.event.inputs.NPM_BUILD }}
+#          DB_MIGRATION: ${{ github.event.inputs.DB_MIGRATION }}
+##          BRANCH_NAME: ${{ github.ref_name }}
+#          BRANCH: ${GITHUB_REF#refs/heads/}
+##          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
+##          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
         with:
           host: ${{ secrets.SSH_SERVER }}
           username: ${{ secrets.SSH_NAME }}
