--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           token: ${{ secrets.PUSH_TOKEN }}
       - name: Set env
-        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+        run: echo "GITHUB_SHA_SHORT=$(echo ${GITHUB_REF#refs/heads/} | cut -c 1-6)" >> $GITHUB_ENV
       - name: Test
         run: echo $GITHUB_SHA_SHORT
 #      - name: Extract branch name
